# kiwis

./: .gitignore  mkdocs.yml  pyproject.toml
cocoa/: __init__.py  __main__.py  cocoa.py  utils.py
docs/: props.md  roadmap.md  security.md
docs/Getting Started/: 1.md  2.md  3.md  4.md  5.md
examples/hello/: site.toml
examples/hello/src/: _base.jinja  about.md  index.jinja  index.py
examples/hello/src/about/: index.jinja
examples/hello/static/: index.css
examples/tailwind/: site.toml
examples/tailwind/src/: _base.jinja  index.jinja
kiwis/: __init__.py  __main__.py  config.py  exceptions.py  kiwis.py  utils.py
