[tool.poetry]
name = "cocoa"
version = "0.1.0"
description = "A simple yet powerful static site generator"
authors = ["wxllow <willow@wxllow.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
rich = "^12.5.1"
rich-click = "^1.5.1"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
